// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TableCell > Style tests > should render with condensed styles 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
  padding: 12px 16px 12px 24px;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<td
  class="circuit-0"
>
  Foo
</td>
`;

exports[`TableCell > Style tests > should render with default styles 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<td
  class="circuit-0"
>
  Foo
</td>
`;

exports[`TableCell > Style tests > should render with header styles 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
}

<td
  class="circuit-0"
>
  Foo
</td>
`;

exports[`TableCell > Style tests > should render with isHovered styles 1`] = `
.circuit-0 {
  background-color: var(--cui-bg-normal);
  border-bottom: 1px solid var(--cui-border-divider);
  padding: 24px;
  text-align: left;
  -webkit-transition: background-color 120ms ease-in-out;
  transition: background-color 120ms ease-in-out;
  vertical-align: middle;
  overflow-wrap: break-word;
  background-color: var(--cui-bg-normal-hovered);
}

<td
  class="circuit-0"
>
  Foo
</td>
`;
